--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -240,10 +240,10 @@ input[type=submit] {
   border: 0 none;
 }
 
-@media screen and (max-width: 768px) {
+/* @media screen and (max-width: 768px) {
  /* .navbar navbar-default {
     max-width: 100%;
-  }  */
+  } 
   .sidebar {
     float: left;
     max-width: unset;
@@ -260,5 +260,18 @@ input[type=submit] {
   }
 }
 @media screen and (max-width: 640px) {
-  
+  .sidebar {
+    float: left;
+    max-width: unset;
   }
+  .main-section {
+    max-width: unset;
+  }
+  .auth-image {
+    width: 50%;
+  }
+  .work {
+    margin: 20px 20px 20px 0;
+    width: 45%;
+  }
+  } */
